# flood_API

./: .env.example  Dockerfile.api  Dockerfile.worker  FLOODPULSE_BACKEND_INTEGRATION_SPEC.md  PROJECT_ROADMAP.md  README.md  alembic.ini  docker-compose.yml  project.txt  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_init.py  0002_forecast_platform.py
app/: __init__.py
app/adapters/: base.py  ea_england.py  geoglows.py  usgs.py  whos.py
app/api/: main.py
app/core/: config.py  enums.py  ids.py  quality.py  units.py  validation.py
app/db/: geometry.py  session.py
app/forecast_models/: __init__.py  base.py  geoglows.py
app/ingestion/: runner.py  schedule.py
app/jobs/: ingest_forecast_reaches.py  ingest_forecast_run.py  verify_geoglows_reach_mapping.py
app/services/: api_utils.py  forecast_product_service.py  forecast_service.py  ingestion_service.py  provider_registry.py  provider_service.py  reach_service.py  station_service.py  threshold_service.py  warning_service.py
app/tests/: test_adapter_contracts.py  test_api_smoke.py  test_api_upgrades.py  test_bbox_filters.py  test_db_geometry.py  test_derived_thresholds.py  test_ea_adapter.py  test_forecast_api.py  test_forecast_config.py  test_forecast_ingest_rules.py  test_forecast_product.py  test_forecast_provider_geoglows.py  test_geoglows_adapter.py  test_ids.py  test_ingestion_flow.py  test_metadata_geometry_sync.py  test_provider_registry.py  test_provider_schedule.py  test_quality.py  test_runner_bootstrap.py  test_sync_history_geoglows.py  test_sync_history_usgs.py  test_units.py  (+5 more)
(+30 files in other folders)
