[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "global-hydrology-feed"
version = "0.1.0"
description = "Production-minded global hydrology backend platform"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.3",
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.2",
  "geoalchemy2>=0.15",
  "httpx>=0.27",
  "apscheduler>=3.10",
  "fsspec>=2024.6.0",
  "s3fs>=2024.6.0",
  "xarray>=2024.6.0",
  "zarr>=2.18.0",
  "pandas>=2.2.0",
  "pyarrow>=16.0.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"
